--- a/courseProject/courseProject/src/app/app.component.html
+++ b/courseProject/courseProject/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (selectedTab)="handleHeaderClick($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-           <app-recipe></app-recipe>
-           <app-shopping-list></app-shopping-list>
+           <app-recipe *ngIf="selectedTab === 'recipe'"></app-recipe>
+           <app-shopping-list  *ngIf="selectedTab === 'shopping_list'"></app-shopping-list>
         </div>
     </div>
 </div>
