--- a/courseProject/courseProject/src/app/header/header.component.html
+++ b/courseProject/courseProject/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
         <div class="navbar-colapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipces</a></li>
-                <li><a href="#">Shopping List</a></li>
+                <li (click)="recipesClicked()"><a href="#" >Recipces</a></li>
+                <li (click)="shoppingListClicked()"><a href="#">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
