--- a/courseProject/courseProject/src/app/shoppingList/shopping-list/shopping-list.component.html
+++ b/courseProject/courseProject/src/app/shoppingList/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-edit-shopping-list></app-edit-shopping-list>
+        <app-edit-shopping-list (ingredientAdded)="onIngredientAdded($event)"></app-edit-shopping-list>
         <hr>
         <ul class="list-group">
             <a
