--- a/courseProject/courseProject/src/app/header/header.component.html
+++ b/courseProject/courseProject/src/app/header/header.component.html
@@ -9,8 +9,8 @@
                 <li (click)="recipesClicked()"><a href="#" >Recipces</a></li>
                 <li (click)="shoppingListClicked()"><a href="#">Shopping List</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+            <ul class="nav navbar-nav navbar-right"  >
+                <li class="dropdown" appDropdown>
                     <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
