services in courseProject

--- a/courseProject/courseProject/src/app/shoppingList/edit-shopping-list/edit-shopping-list.component.html
+++ b/courseProject/courseProject/src/app/shoppingList/edit-shopping-list/edit-shopping-list.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" (click)="addIngredient()" type="submit">Add</button>
+                    <button class="btn btn-success" (click)="addIngredient()" type="button">Add</button>
                     <button class="btn btn-danger" type="button">Delete</button>
                     <button class="btn btn-primary" type="button">Clear</button>
                 </div>
