--- a/exampleRouter/src/app/servers/servers.component.html
+++ b/exampleRouter/src/app/servers/servers.component.html
@@ -2,17 +2,22 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
+        [queryParams]="{allowEdit: server.id === 3 ? '1': '0'}"
+        [routerLink]="['/servers', server.id]"
+        fragment="loading"
         href="#"
         class="list-group-item"
-        *ngFor="let server of servers">
+        *ngFor="let server of servers"       >
         {{ server.name }}
       </a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
+    <router-outlet></router-outlet>
+    <!--<button class="btn btn-primary" (click)="reloadMe()">Reload Page</button>
     <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+     <app-server></app-server> -->
   </div>
 </div>
 
