--- a/courseProject/courseProject/src/app/receipeBook/recipe-detail/recipe-detail.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-detail/recipe-detail.component.html
@@ -15,13 +15,13 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="dropdown" appDropdown>
-            <button href="#" type="button" class="btn btn-primary dropdown-toggle">
+            <button type="button" class="btn btn-primary dropdown-toggle">
                 Manage Recipe <span class="caret"></span>
             </button> 
             <ul class="dropdown-menu">
                 <li><a style="cursor: pointer;" (click)="sendIngredientsToShoppingList()">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" routerLink="edit" >Edit Recipe</a></li>
+                <li><a style="cursor: pointer;" >Delete Recipe</a></li>
             </ul>
         </div>
     </div>
