--- a/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-item/recipe-item.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,8 @@
-<a href="#" (click)="clickOnRecipe()" class="list-group-item clearfix">
+<a
+    [routerLink]="recipe.id"
+    style="cursor: pointer;"
+    class="list-group-item clearfix"
+    routerLinkActive="active">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
         <p class = "list-group-item-text">{{ recipe.description }}</p>
