--- a/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-list.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn btn-success">New recipe</div>
+        <div class="btn btn-success" routerLink="new">New recipe</div>
     </div>
 </div>
 <hr>
@@ -8,7 +8,7 @@
     <div class="col-xs-12" > 
         <app-recipe-item 
         *ngFor="let recipeEl of recipes"
-         [recipe]="recipeEl"
+        [recipe] = "recipeEl"
          ></app-recipe-item>
     </div>
 </div>
