--- a/courseProject/courseProject/src/app/receipeBook/recipe-detail/recipe-detail.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
             <ul class="dropdown-menu">
                 <li><a style="cursor: pointer;" (click)="sendIngredientsToShoppingList()">To Shopping List</a></li>
                 <li><a style="cursor: pointer;" routerLink="edit" >Edit Recipe</a></li>
-                <li><a style="cursor: pointer;" >Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="deleteRecipe()">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
