--- a/courseProject/courseProject/src/app/shoppingList/edit-shopping-list/edit-shopping-list.component.html
+++ b/courseProject/courseProject/src/app/shoppingList/edit-shopping-list/edit-shopping-list.component.html
@@ -1,28 +1,33 @@
 <div class="row">
     <div class="col-xs-12">
-        <form >
+        <form (ngSubmit)="addIngredient(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
                     <input type="text"
                      id="name"
-                     #nameInput
-                     class="form-control">
+                     class="form-control"
+                     name="name"
+                     ngModel
+                     required>
                 </div>
                 <div class="col-sm-5 form-group">
                     <label for="amount">Amount</label>
                     <input type="number"
                      id="amount"
                      class="form-control"
-                     #amountInput
+                     name="amount"
+                     ngModel
+                     required
+                     [pattern]="'^[1-9]+[0-9]*$'"
                      >
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" (click)="addIngredient()" type="button">Add</button>
-                    <button class="btn btn-danger" type="button">Delete</button>
-                    <button class="btn btn-primary" type="button">Clear</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}</button>
+                    <button class="btn btn-danger" *ngIf="editMode" type="button" (click)="deleteItem()">Delete</button>
+                    <button class="btn btn-primary" type="button" (click)="clearForm()">Clear</button>
                 </div>
             </div>
         </form>
