--- a/courseProject/courseProject/src/app/receipeBook/recipe-edit/recipe-edit.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-edit/recipe-edit.component.html
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <img [src]="imagePath" class="img-responsive">
+                    <img [src]="imagePath.value" class="img-responsive">
                 </div>
             </div>
             <div class="row">
