--- a/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-item/recipe-item.component.html
+++ b/courseProject/courseProject/src/app/receipeBook/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a
-    [routerLink]="recipe.id"
+    [routerLink]="id"
     style="cursor: pointer;"
     class="list-group-item clearfix"
     routerLinkActive="active">
