--- a/courseProject/courseProject/src/app/auth/auth.component.html
+++ b/courseProject/courseProject/src/app/auth/auth.component.html
@@ -1,7 +1,8 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <div class="alert alert-danger" *ngIf="error"><p>{{ error }}</p></div>
-        <div *ngIf="isLoading" style="text-align: center;">
+        <!-- <div class="alert alert-danger" *ngIf="error"><p>{{ error }}</p></div> -->
+        <app-alert [message]="error" *ngIf="error"  (close)="onHandleError()"></app-alert>
+        <div *ngIf="isLoading" style="text-align: center;" >
             <app-loading-spinner></app-loading-spinner>
         </div>
         <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
