--- a/courseProject/courseProject/src/app/auth/auth.component.html
+++ b/courseProject/courseProject/src/app/auth/auth.component.html
@@ -3,10 +3,10 @@
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <!-- <div class="alert alert-danger" *ngIf="error"><p>{{ error }}</p></div> -->
         <!-- <app-alert [message]="error" *ngIf="error"  (close)="onHandleError()"></app-alert> -->
-        <div *ngIf="isLoading" style="text-align: center;" >
+        <div *ngIf="isLoading$" style="text-align: center;" >
             <app-loading-spinner></app-loading-spinner>
         </div>
-        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading$">
             <div class="form-group">
                 <label for="email">E-Mail</label>
                 <input type="email" id="email" class="form-control" ngModel name="email" required email>
